# raibot

./: .gitignore  README.md
audio-processing/: pyproject.toml
audio-processing/speech-to-text/: speech-to-text.py  speech_to_text.py
audio-processing/text-to-speech/: text-to-speech.py  text_to_speech.py
depth-estimation/: README.md  calculate_distances.py  depth_estimation.py  environment.yaml  run.py
depth-estimation/input/: input-json
model-running-server/: package-lock.json  package.json  tsconfig.json
model-running-server/src/: chatbot.ts  chatbox.ts  index.ts
model-running-server/src/audio-io/: auto-recording.ts  index.ts  input.ts  output.ts
model-running-server/src/command-interface/: actions.ts  messages.ts
model-running-server/src/depth-estimation/: index.ts
model-running-server/src/language-model/: Modelfile  index.ts  prompt.ts
model-running-server/src/object-detection/: index.ts
model-running-server/src/processors/: index.ts
model-running-server/src/robot-state/: index.ts
model-running-server/src/shared/: constants.ts
model-running-server/src/speech-to-text/: index.ts
model-running-server/src/text-to-speech/: index.ts
object-detection/: .gitignore  pyproject.toml
object-detection/object-detection/: default_target_classes.py  non_max_suppression.py  object-detection.py  object_detection.py
robot-control-server/: package-lock.json  package.json  tsconfig.json
robot-control-server/src/: index.ts
server/: package-lock.json  package.json
server/src/: index.ts
web-ui/: package-lock.json  package.json
(+139 files in other folders)
