[tool.poetry]
name = "audio-processing"
version = "0.1.0"
description = ""
authors = ["Joey Zheng <joey.zheng@smokeball.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
transformers = "^4.38.1"
optimum = "^1.17.1"
accelerate = "^0.27.2"
torch = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
