[tool.poetry]
name = "object-detection"
version = "0.1.0"
description = ""
authors = ["Joey Zheng <joey.zheng@smokeball.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ultralytics = "^8.1.27"
setuptools = "^69.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
